Fix too small to fit text

--- a/src/styles/components/Hero.scss
+++ b/src/styles/components/Hero.scss
@@ -11,8 +11,7 @@
 }
 .section.hero-sub {
     z-index: 3;
-    width: 100%;
-    height: 80vh;
+    min-height: 80vh;
     position: relative;
     padding-top: 20vh;
     color: black;
